--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Shop - A sua loja de games</title>
+    <title>Il Pomodoro Mistico - Culinária Italiana</title>
     <link rel="stylesheet" href="main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Games Shop</h1>
+            <img class="Tomate" src="./images/MysticTomato-DULI-EN-VG-NC.png">
+            <h1>Il Pomodoro Mistico</h1>
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">Sobre a loja</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li>
-                        <a href="#contact">Contato</a>
+                        <a href="#contact">Contato e Reservas</a>
                     </li>
                 </ul>
             </nav>
@@ -28,20 +33,15 @@
     </header> 
     <section id="about">
         <div class="container">
-            <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja Games Shop" />
+            <img class="store-front" src="./images/5d81c434cce79a5ac71f358cd0d7ba64.jpg" alt="Fachada do Restaurante Pomodoro Mistico" />
             <div>
-                <h2>sobre a loja</h2>
+                <h2>Sobre o restaurante</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est excepturi veritatis rem aperiam officia alias tempore mollitia quis necessitatibus maxime odit delectus, quae veniam aliquam atque asperiores placeat voluptatum qui.
+                    Culinária Italiana de primeira qualidade. Pratos Tradicionais e Avançados, ingredientes frescos e organicos. Temos opções Veganas e Vegetarianas
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, porro incidunt. Dolore corporis facilis nesciunt inventore quod, ea quas sed reprehenderit cum dicta accusantium sunt, quia cupiditate dolores dolor culpa?
+                    Não deixe os nossos pratos deliciosos, e preços imbativeis de distrair do fato de que o Tomate Mistico ao ser destruido por batalha, lhe permite invocar um mostro de atributo DARK com ATK de 1500 ou menos em posição de ataque (incluindo outra copia de si mesmo!).
                 </p>
-                <ul class="brands-list">
-                    <li><img src="/images/nintendo.png" alt="logo da Nintendo"></li>
-                    <li><img src="/images/xbox.png" alt="logo da XBOX"></li>
-                    <li><img src="/images/playstation.png" alt="logo da Playstation"></li>
-                </ul>
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@
             <h2>Contato</h2>
             <div class="contact-methods">
                 <div>
-                    <h3>Fale conosco</h3>
+                    <h3>Faça sua Reserva!</h3>
                     <form>
                         <input type="text" placeholder="Seu nome"  required/>
                         <input type="email" placeholder="Seu e-mail" required/>
@@ -73,8 +73,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" title="Visite nosso canal no YouTube">
-                                <img src="./images/youtube.png" alt="Logo do YouTube" />
+                            <a href="#" title="Visite nosso perfil no X (antigamente conhecido como Twitter)">
+                                <img src="./images/images.png" alt="Logo do Twitter" />
                             </a>
                         </li>
                     </ul>
@@ -82,7 +82,7 @@
                 <div>
                     <h3>Venha até nós</h3>
                     <p>
-                        Rua Javascript Numero 123, Vila HTML -São Paulo - SP
+                        Rua Kazuki Takahashi Numero 1996, Bairro Hayashii -Martinópolis- SP
                     </p>
                 </div>
             </div>
@@ -91,7 +91,7 @@
     <footer>
         <div class="container">
             <p>
-                &copy; Games Shop - Todos os Direitos Reservados 2024
+                &copy; Pomodoro Mistico - Todos os Direitos Reservados 2024
             </p>
         </div>
     </footer>
